# leather-studio-3d

./: .gitignore  CLAUDE.md  README.md  index.html  run-smoke.cmd
.claude/commands/: smoketest-full.md  smoketest-quick.md
.claude/skills/2d-to-3d-rendering/: SKILL.md
.claude/skills/ui-language/: SKILL.md
.github/workflows/: release.yml
MD files/: CONTEXT.md  DEVLOG.md  SEAM-CONSUMPTION.md  SHORTCUTS.md
desktop/: .gitignore  README.md  build-info.json  icon-source.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
samples/: SampleCardHolder.lpd  demo-card-pocket.lpd
tests/: run-build-smoke.ps1  run-smoke.ps1  smoke-harness.js
tools/: README.md  ship.ps1
